
7.90  0000-00-00

  - Created Validation::Class::Whitepaper as a sounding-board and source for FAQs

  - Rewrite of all documentation iteratively, under the Validation::Class::Manual namespace

  - Rewrite of Validation::Class, main module provides sugar for configuration only

  - Rewrite of Validation::Class::Prototype, now is configurable using OO

  - Removed inheritence support via 'base' as it existed in 7.85

  - Removed the object keyword and support as it existed in 7.85

7.85  2012-09-21

  - The load/set and object/obj keywords documentation has been moved into the intro document under hidden features

  - Fixed Class::Forward version dependency which cause test failures in previous versions

7.84  2012-09-20

  - The import method has been modified to copy/merge meta-class configs based on inheritance

7.82  2012-08-13

  - The class method/functionality has been refactored and is now using Class::Forward

  - New invalid parameter error triggered when arrayrefs are discovered with nested structures (non-scalars)

7.81  2012-08-11

  - fixed array/filtering issue (rare bug)

7.80  2012-07-31

  - fixed typo in custom validation

7.79  2012-07-28

  - updated the object keyword and functionality (untested)

7.78  2012-07-28

  - changed flatten/unflatten functionality, now only happens during validation

  - fixed unneccessary serialization, field and values are always as expected

  - better parameter handling (backwards-compatibility: some earlier functionality issues may occur)

7.77  2012-07-27

  - better handling of custom validation (and registering resulting errors)

7.75  2012-07-15

  - added the validate_profile method (untested atm)

7.74  2012-07-03

  - allow class to cooperate with non-validation classes

7.72  2012-07-02

  - main module POD changes

  - renamed constructor replacement to initialize_validator

  - restrict the class method from passing parameters that don't exist

7.70  2012-06-28
