@@ -22,9 +22,9 @@ documented it just yet.
 
 =cut
 
-has 'mixin'     => 1;
-has 'field'     => 1;
-has 'multi'     => 1;
-has 'dependencies'  => sub {['value']};
+has 'mixin'        => 1;
+has 'field'        => 1;
+has 'multi'        => 1;
+has 'dependencies' => sub { ['value'] };
 
 1;
